--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/imagenes/camisetas-web/Logo-removebg-preview.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FutCamisRetros | Camisetas Retro de Fútbol | Tienda Oficial</title>
-    <meta name="description" content="FutCamisRetros - Tienda oficial especializada en camisetas retro de fútbol. Revive la historia con nuestras camisetas clásicas de todas las épocas. Envíos rápidos y seguros. Packs sorpresa disponibles." />
+    <title>FutCamisRetros | Camisetas Retro de Fútbol Baratas | Tienda Oficial</title>
+    <meta name="description" content="FutCamisRetros - Tienda oficial especializada en camisetas retro de fútbol baratas. Revive la historia con nuestras camisetas clásicas de todas las épocas. Envíos rápidos y seguros. Packs sorpresa disponibles." />
+    <meta name="keywords" content="camisetas retro, camisetas de fútbol, camisetas baratas, camisetas retro de fútbol, camisetas clásicas, camisetas vintage, camisetas de equipos históricos, camisetas de fútbol baratas, camisetas de la liga, premier league, serie a, bundesliga" />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="FutCamisRetros" />
+    <meta property="og:title" content="FutCamisRetros | Camisetas Retro de Fútbol Baratas | Tienda Oficial" />
+    <meta property="og:description" content="Tienda oficial especializada en camisetas retro de fútbol baratas. Revive la historia con nuestras camisetas clásicas de todas las épocas." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://futcamisretros.com" />
+    <meta property="og:image" content="/imagenes/camisetas-web/Logo-removebg-preview.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="FutCamisRetros | Camisetas Retro de Fútbol Baratas" />
+    <meta name="twitter:description" content="Tienda oficial especializada en camisetas retro de fútbol baratas. Revive la historia con nuestras camisetas clásicas de todas las épocas." />
+    <meta name="twitter:image" content="/imagenes/camisetas-web/Logo-removebg-preview.png" />
+    <link rel="canonical" href="https://futcamisretros.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
