Update meta tags for improved SEO
Revised the title and description meta tags in index.html to better reflect the site's offerings and target relevant keywords for retro football shirts. This should enhance search engine visibility and attract more users.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" type="image/webp" href="/imagenes/optimized/Logo-removebg-preview.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FutCamisRetros | Camisetas Retro de Fútbol Baratas | Tienda Oficial</title>
-    <meta name="description" content="FutCamisRetros - Tienda oficial especializada en camisetas retro de fútbol baratas. Revive la historia con nuestras camisetas clásicas de todas las épocas. Envíos rápidos y seguros. Packs sorpresa disponibles." />
+    <meta name="title" content="Camisetas Retro de Fútbol Baratas | FutCamisRetros™ | Envío 24h y Stock 90s & 2000s" />
+    <meta name="description" content="Descubre camisetas retro de fútbol originales y baratas. Modelos de los 80, 90 y 2000. Envío rápido. Stock limitado. ¡Revive la historia del fútbol!" />
     <meta name="keywords" content="camisetas retro, camisetas de fútbol, camisetas baratas, camisetas retro de fútbol, camisetas clásicas, camisetas vintage, camisetas de equipos históricos, camisetas de fútbol baratas, camisetas de la liga, premier league, serie a, bundesliga" />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="FutCamisRetros" />
